# rust-cohort

./: .gitignore  CLAUDE.md  README.md
rust-json-parser/: BENCHMARKS.md  Cargo.toml  justfile  pyproject.toml
rust-json-parser/examples/: profile_bench.rs
rust-json-parser/python/rust_json_parser/: __init__.py  __main__.py
rust-json-parser/src/: error.rs  lib.rs  main.rs  parser.rs  python_bindings.rs  tokenizer.rs  value.rs
rust-json-parser/tests/: test_python_integration.py
