[package]
name = "rust-json-parser"
version = "0.1.0"
edition = "2024"

[lib]
name = "rust_json_parser"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.29.0", features = ["extension-module"], optional = true }
rustc-hash = "2.1.2"

[features]
default = ["python"]
python = ["dep:pyo3"]

[profile.profiling]
inherits = "release"
debug = true
